# Stock-trading-agent

./: .dockerignore  .gitignore  .mcp.json  Architecture-diagram-stock-screener-bot.drawio  CLAUDE.md  Dockerfile  LEARNINGS.md  LICENSE  MANIFEST.in  README.md  Things-to-add.txt  alpaca_mcp.py  pyproject.toml  requirements.txt  resume_chat.sh  run.py  run_agents.py  run_aws_bot.sh  test_run.py  verify_weighting.py  web.py
.claude/: settings.json
alphadesk/: config.py  llm.py  main.py
alphadesk/app/: dashboard.py  scheduler.py
alphadesk/app/static/: index.html
alphadesk/app/static/assets/: index-1GTsnjCB.js  index-25Dp48VX.js  index-Ap1hqVKo.js  index-B53GQ3q8.js  index-B53jxKb8.js  index-B9yg2HLj.js  index-BBJ7zgDD.css  index-BCR8fb7Q.css  index-BH8dr1qn.js  index-BM9Gw3Re.js  index-BNcljMGF.js  index-BTKByq6M.js  index-BTyVZi7V.css  index-BXl-KnTx.js  index-B_nAN6eU.js  index-BbYGiFb-.js  index-BeY7sxCl.js  index-Bf9AemSo.css  index-Bi8ngwN2.css  index-BiHIKvCa.js  index-Brr-rpwh.css  index-Bsazn1VM.js  index-Btq4PWJT.css  index-BzDhXHJv.js  index-C07q_I1D.js  index-C0RGIDqB.css  index-CAwhNWj6.css  (+58 more)
alphadesk/deploy/: setup.sh
alphadesk/deploy/terraform/: main.tf
alphadesk/desk/: briefs.py  committee.py  connections.py  debate.py  earnings_reader.py  exposure.py  loner.py  materiality.py  news_check.py  notes.py  plan.py  portfolio.py  review.py  scout.py  solo.py  stream.py  team.py  triage.py  workflow.py
alphadesk/ingest/: earnings.py  news.py  prices.py  world.py
alphadesk/ledger/: grader.py  store.py
alphadesk/ui/: package.json  pnpm-lock.yaml
alphadesk/ui/src/: App.tsx  index.css
deploy/: deploy.sh  teardown.sh
etf_sentiment/: __init__.py  alerts.py  backtester.py  cli.py  cloud_output.py  history.py  scheduler.py  screener_app.py
etf_sentiment/display/: screener_dashboard.py
etf_sentiment/market/: price_fetcher.py  screener.py  stock_predictor.py  technicals.py
etf_sentiment/news/: base.py
etf_sentiment/nlp/: sentiment.py
static/: app.js  style.css
stock_sentiment/: alerts.py  backtester.py  cloud_output.py  config.py  history.py  scheduler.py  screener_app.py
stock_sentiment/agents/: __init__.py  base.py  broker.py  critic.py  crypto_watcher.py  event_bus.py  executor.py  learning.py  macro.py  memory.py  monitor.py  news.py  news_watcher.py  orchestrator.py  portfolio.py  predictor.py  prompt_tuner.py  research.py  risk.py  scanner.py  screener.py  watcher.py
stock_sentiment/display/: screener_dashboard.py
stock_sentiment/market/: broker.py  market_regime.py  news_monitor.py  news_providers.py  performance.py  price_fetcher.py  screener.py  stock_predictor.py  technicals.py  weight_optimizer.py
stock_sentiment/nlp/: sentiment.py
templates/: index.html  login.html
(+11 files in other folders)
