[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphadesk"
version = "0.2.0"
description = "AlphaDesk — predictive multi-agent stock research engine (Claude Agent SDK)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Vignesh Murugan" },
]
keywords = ["stocks", "research", "multi-agent", "llm", "claude", "trading", "prediction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "claude-agent-sdk>=0.2.0",
    "alpaca-py>=0.14.0",
    "yfinance>=0.2.31",
    "pandas>=2.0.0",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "python-multipart",
]

[project.urls]
Homepage = "https://github.com/vigneshv1cky/Stock-trading-agent"
Repository = "https://github.com/vigneshv1cky/Stock-trading-agent"

[tool.setuptools.packages.find]
include = ["alphadesk*"]
